--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ZenSite | Webs que venden</title>
-<meta name="description" content="ZenSite crea webs profesionales que generan confianza y convierten visitas en clientes reales." />
+
+<meta name="description" content="Diseño web profesional enfocado en generar confianza y clientes reales.">
 
 <style>
-/* RESET */
 *{margin:0;padding:0;box-sizing:border-box}
-html{scroll-behavior:smooth}
 body{
-  font-family:Segoe UI, Arial, sans-serif;
+  font-family:Segoe UI,Arial,sans-serif;
   background:#000;
   color:#fff;
   overflow-x:hidden;
@@ -19,110 +18,57 @@ body{
 
 /* HEADER */
 header{
-  position:relative;
-  z-index:20;
   display:flex;
   justify-content:space-between;
   align-items:center;
-  gap:16px;
   padding:16px 20px;
 }
-header .brand{
-  font-weight:900;
-  letter-spacing:.6px;
+header strong{
   font-size:18px;
-}
-nav{
-  display:flex;
-  flex-wrap:wrap;
-  justify-content:flex-end;
-  gap:10px;
+  font-weight:800;
 }
 nav a{
   color:#fff;
   text-decoration:none;
+  margin-left:14px;
   font-weight:700;
   opacity:.85;
-  padding:8px 10px;
-  border-radius:10px;
 }
-nav a:hover{opacity:1;background:rgba(255,255,255,.06)}
+nav a:hover{opacity:1}
 
 /* HERO */
 .hero{
-  min-height:78vh;
+  min-height:100vh;
   display:flex;
   align-items:center;
   justify-content:center;
   text-align:center;
-  padding:44px 18px 10px;
+  padding:120px 20px 80px;
 }
 .hero h1{
-  font-size:clamp(44px,7vw,86px);
-  margin-bottom:14px;
-  text-shadow:0 0 26px rgba(0,200,255,.55);
+  font-size:clamp(42px,7vw,80px);
+  margin-bottom:18px;
 }
 .hero p{
-  max-width:820px;
+  max-width:760px;
+  margin:0 auto 50px;
   font-size:20px;
-  line-height:1.6;
   opacity:.95;
 }
 
-/* EMBED IMAGE (NO FILES, NO FAILS) */
+/* LAPTOP PROFESIONAL */
 .laptop{
-  display:flex;
-  justify-content:center;
-  padding:22px 18px 0;
+  max-width:820px;
+  margin:0 auto;
 }
-.laptop svg{
+.laptop img{
   width:100%;
-  max-width:480px;
+  height:auto;
+  display:block;
   border-radius:18px;
-  box-shadow:0 30px 60px rgba(0,0,0,.85);
-}
-
-/* SECTION */
-.section{
-  max-width:1100px;
-  margin:auto;
-  padding:88px 18px;
-  text-align:left;
-}
-.section h2{
-  font-size:34px;
-  margin-bottom:28px;
-  text-align:center;
-}
-.cards{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:18px;
-}
-.card{
-  background:rgba(255,255,255,.06);
-  padding:26px;
-  border-radius:20px;
-  backdrop-filter:blur(10px);
-}
-
-/* TRANSLATOR — NO TAPA NADA */
-#google_translate_element{
-  position:fixed;
-  bottom:16px;
-  left:16px;
-  z-index:60;
-}
-.goog-logo-link,
-.goog-te-gadget span{display:none!important}
-.goog-te-gadget{color:transparent!important}
-.goog-te-combo{
-  background:#000;
-  color:#00cfff;
-  border:1px solid #00cfff;
-  padding:6px 10px;
-  border-radius:8px;
-  font-weight:800;
+  box-shadow:
+    0 45px 90px rgba(0,0,0,.85),
+    0 15px 35px rgba(0,0,0,.6);
 }
 
 /* WHATSAPP */
@@ -130,8 +76,8 @@ nav a:hover{opacity:1;background:rgba(255,255,255,.06)}
   position:fixed;
   bottom:16px;
   right:16px;
-  width:58px;
-  height:58px;
+  width:56px;
+  height:56px;
   background:#25D366;
   border-radius:50%;
   display:flex;
@@ -140,25 +86,21 @@ nav a:hover{opacity:1;background:rgba(255,255,255,.06)}
   font-size:28px;
   color:#fff;
   text-decoration:none;
-  z-index:60;
+  z-index:50;
 }
 
 /* MOBILE */
-@media(max-width:420px){
-  header{padding:14px 14px}
-  nav a{padding:7px 9px}
+@media(max-width:768px){
+  .hero{padding-top:100px}
 }
 </style>
 </head>
 
 <body>
 
-<!-- TRANSLATOR -->
-<div id="google_translate_element"></div>
-
 <header>
-  <div class="brand">ZenSite</div>
-  <nav aria-label="Navegación principal">
+  <strong>ZenSite</strong>
+  <nav>
     <a href="index.html">Inicio</a>
     <a href="demo.html">Demos</a>
     <a href="planes.html">Planes</a>
@@ -170,58 +112,19 @@ nav a:hover{opacity:1;background:rgba(255,255,255,.06)}
   <div>
     <h1>ZenSite</h1>
     <p>
-      Diseñamos experiencias web profesionales enfocadas en generar confianza,
-      posicionar tu marca y convertir visitas en clientes reales.
+      Diseñamos webs profesionales pensadas para verse grandes,
+      transmitir confianza y convertir visitas en clientes.
     </p>
-  </div>
-</section>
 
-<!-- LAPTOP EMBEBIDA (SIEMPRE SE VE) -->
-<div class="laptop" aria-hidden="true">
-  <svg viewBox="0 0 800 520" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Vista previa ZenSite">
-    <defs>
-      <linearGradient id="glow" x1="0" x2="1">
-        <stop offset="0" stop-color="#00cfff" stop-opacity=".65"/>
-        <stop offset="1" stop-color="#00cfff" stop-opacity=".15"/>
-      </linearGradient>
-    </defs>
-
-    <rect x="40" y="30" rx="26" ry="26" width="720" height="420" fill="#111"/>
-    <rect x="80" y="70" rx="18" ry="18" width="640" height="320" fill="#000"/>
-
-    <rect x="100" y="90" rx="14" ry="14" width="600" height="90" fill="url(#glow)" opacity=".35"/>
-    <text x="400" y="230" text-anchor="middle" font-size="56" fill="#00cfff" font-family="Arial, Helvetica, sans-serif">ZenSite</text>
-    <text x="400" y="280" text-anchor="middle" font-size="20" fill="#9aa" font-family="Arial, Helvetica, sans-serif">Webs que venden</text>
-
-    <rect x="240" y="460" rx="14" ry="14" width="320" height="20" fill="#333"/>
-  </svg>
-</div>
-
-<section class="section">
-  <h2>Webs hechas para verse grandes</h2>
-  <div class="cards">
-    <div class="card">🚀 Diseño profesional que impacta desde el primer segundo</div>
-    <div class="card">📱 Experiencia perfecta en móvil y escritorio</div>
-    <div class="card">💎 Imagen seria que genera confianza real</div>
+    <div class="laptop">
+      <img src="./background.jpg?v=1" alt="ZenSite web preview">
+    </div>
   </div>
 </section>
 
 <a class="whatsapp"
    href="https://wa.me/15027942412?text=Hola,%20quiero%20una%20web%20profesional"
-   target="_blank"
-   rel="noopener"
-   aria-label="Contactar por WhatsApp">💬</a>
-
-<!-- GOOGLE TRANSLATE -->
-<script>
-function googleTranslateElementInit(){
-  new google.translate.TranslateElement(
-    { pageLanguage:'es', includedLanguages:'es,en' },
-    'google_translate_element'
-  );
-}
-</script>
-<script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+   target="_blank">💬</a>
 
 </body>
 </html>
