--- a/demo.html
+++ b/demo.html
@@ -104,8 +104,9 @@ p{
 <div class="slider">
   <div class="demo"><img src="./demo1.jpg"></div>
   <div class="demo"><img src="./demo2.jpg"></div>
-  <div class="demo"><img src="./demo3.jpg"></div>
-  <div class="demo"><img src="./demo4.jpg"></div>
+  <img src="./demo3.jpg?v=2">
+<img src="./demo4.jpg?v=2">
+
   <div class="demo"><img src="./demo5.jpg"></div>
 </div>
 
@@ -113,3 +114,4 @@ p{
 
 </body>
 </html>
+
