--- a/demo.html
+++ b/demo.html
@@ -104,14 +104,14 @@ p{
 <div class="slider">
   <div class="demo"><img src="./demo1.jpg"></div>
   <div class="demo"><img src="./demo2.jpg"></div>
-  <img src="./demo3.jpg?v=2">
-<img src="./demo4.jpg?v=2">
-
-  <div class="demo"><img src="./demo5.jpg"></div>
+  <img src="https://raw.githubusercontent.com/olivahr/zzzzz/main/demo3.jpg">
+<img src="https://raw.githubusercontent.com/olivahr/zzzzz/main/demo4.jpg">
+ <div class="demo"><img src="./demo5.jpg"></div>
 </div>
 
 <a class="whatsapp" href="https://wa.me/15027942412" target="_blank">💬</a>
 
 </body>
 </html>
+
 
