--- a/index.html
+++ b/index.html
@@ -5,93 +5,153 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ZenSite | Webs que venden</title>
 
-<meta name="description" content="Diseño web profesional enfocado en generar confianza y clientes reales.">
-
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
+html{scroll-behavior:smooth}
 body{
   font-family:Segoe UI,Arial,sans-serif;
-  background:#000;
+  background:#0b0e14;
   color:#fff;
   overflow-x:hidden;
 }
 
-/* HEADER */
+/* ===== FONDO ===== */
+body::before{
+  content:"";
+  position:fixed;
+  inset:0;
+  background:url('background.jpg') center/cover no-repeat;
+  z-index:-2;
+}
+body::after{
+  content:"";
+  position:fixed;
+  inset:0;
+  background:linear-gradient(180deg,rgba(0,0,0,.6),rgba(0,0,0,.9));
+  z-index:-1;
+}
+
+/* ===== HEADER ===== */
 header{
+  position:sticky;
+  top:0;
+  z-index:1000;
   display:flex;
   justify-content:space-between;
   align-items:center;
-  padding:16px 20px;
+  padding:16px 30px;
+  background:rgba(0,0,0,.55);
+  backdrop-filter:blur(10px);
 }
+
 header strong{
-  font-size:18px;
-  font-weight:800;
+  font-size:20px;
+  letter-spacing:.5px;
 }
+
+nav{
+  display:flex;
+  align-items:center;
+  gap:22px;
+}
+
 nav a{
   color:#fff;
   text-decoration:none;
-  margin-left:14px;
-  font-weight:700;
+  font-weight:600;
   opacity:.85;
 }
 nav a:hover{opacity:1}
 
-/* HERO */
+/* ===== LANG SWITCH ===== */
+.lang-switch{
+  display:flex;
+  gap:8px;
+  margin-left:10px;
+}
+.lang-switch button{
+  background:transparent;
+  border:1px solid rgba(255,255,255,.3);
+  color:#fff;
+  padding:4px 10px;
+  border-radius:8px;
+  cursor:pointer;
+  font-weight:600;
+  font-size:13px;
+}
+.lang-switch button:hover{
+  background:#00cfff;
+  color:#000;
+}
+
+/* ===== HERO ===== */
 .hero{
-  min-height:100vh;
+  min-height:92vh;
   display:flex;
   align-items:center;
   justify-content:center;
   text-align:center;
-  padding:120px 20px 80px;
-}
-.hero h1{
-  font-size:clamp(42px,7vw,80px);
-  margin-bottom:18px;
-}
-.hero p{
-  max-width:760px;
-  margin:0 auto 50px;
-  font-size:20px;
-  opacity:.95;
+  padding:40px 20px;
 }
 
-/* LAPTOP PROFESIONAL */
+.hero-inner{
+  max-width:900px;
+  animation:float 7s ease-in-out infinite;
+}
+
+@keyframes float{
+  0%,100%{transform:translateY(0)}
+  50%{transform:translateY(-16px)}
+}
+
+.hero h1{
+  font-size:clamp(46px,7vw,90px);
+  margin-bottom:20px;
+  text-shadow:
+    0 0 30px rgba(0,200,255,.6),
+    0 0 60px rgba(0,200,255,.35);
+}
+
+.hero p{
+  font-size:20px;
+  line-height:1.6;
+  opacity:.95;
+  margin-bottom:40px;
+}
+
+/* ===== LAPTOP ===== */
 .laptop{
-  max-width:820px;
+  max-width:520px;
   margin:0 auto;
 }
 .laptop img{
   width:100%;
-  height:auto;
-  display:block;
   border-radius:18px;
-  box-shadow:
-    0 45px 90px rgba(0,0,0,.85),
-    0 15px 35px rgba(0,0,0,.6);
+  box-shadow:0 40px 90px rgba(0,0,0,.8);
 }
 
-/* WHATSAPP */
+/* ===== WHATSAPP ===== */
 .whatsapp{
   position:fixed;
-  bottom:16px;
-  right:16px;
-  width:56px;
-  height:56px;
+  bottom:22px;
+  right:22px;
+  width:60px;
+  height:60px;
   background:#25D366;
   border-radius:50%;
   display:flex;
   align-items:center;
   justify-content:center;
-  font-size:28px;
+  font-size:30px;
   color:#fff;
   text-decoration:none;
-  z-index:50;
+  z-index:3000;
 }
 
-/* MOBILE */
+/* ===== MOBILE ===== */
 @media(max-width:768px){
-  .hero{padding-top:100px}
+  nav{gap:14px}
+  .hero p{font-size:18px}
 }
 </style>
 </head>
@@ -101,30 +161,48 @@ nav a:hover{opacity:1}
 <header>
   <strong>ZenSite</strong>
   <nav>
-    <a href="index.html">Inicio</a>
-    <a href="demo.html">Demos</a>
-    <a href="planes.html">Planes</a>
-    <a href="nosotros.html">Nosotros</a>
+    <a href="index.html" data-es="Inicio" data-en="Home">Inicio</a>
+    <a href="demo.html" data-es="Demos" data-en="Demos">Demos</a>
+    <a href="planes.html" data-es="Planes" data-en="Plans">Planes</a>
+    <a href="nosotros.html" data-es="Nosotros" data-en="About">Nosotros</a>
+
+    <div class="lang-switch">
+      <button onclick="setLang('es')">ES</button>
+      <button onclick="setLang('en')">EN</button>
+    </div>
   </nav>
 </header>
 
 <section class="hero">
-  <div>
-    <h1>ZenSite</h1>
-    <p>
-      Diseñamos webs profesionales pensadas para verse grandes,
-      transmitir confianza y convertir visitas en clientes.
+  <div class="hero-inner">
+    <h1 data-es="ZenSite" data-en="ZenSite">ZenSite</h1>
+
+    <p
+      data-es="Diseñamos webs profesionales pensadas para verse grandes, transmitir confianza y convertir visitas en clientes."
+      data-en="We design professional websites built to look premium, build trust, and convert visitors into clients.">
     </p>
 
     <div class="laptop">
-      <img src="./background.jpg?v=1" alt="ZenSite web preview">
+      <img src="background.jpg" alt="ZenSite website preview">
     </div>
   </div>
 </section>
 
-<a class="whatsapp"
-   href="https://wa.me/15027942412?text=Hola,%20quiero%20una%20web%20profesional"
-   target="_blank">💬</a>
+<a class="whatsapp" href="https://wa.me/15027942412" target="_blank">💬</a>
+
+<script>
+function setLang(lang){
+  document.querySelectorAll("[data-es]").forEach(el=>{
+    el.innerText = el.getAttribute("data-" + lang);
+  });
+  localStorage.setItem("lang", lang);
+}
+
+const savedLang = localStorage.getItem("lang");
+if(savedLang){
+  setLang(savedLang);
+}
+</script>
 
 </body>
 </html>
