--- a/demo.html
+++ b/demo.html
@@ -3,44 +3,49 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ZenSite | Demos</title>
+<title>ZenSite | Demo System</title>
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 body{
-  font-family:Segoe UI,Arial,sans-serif;
-  background:#0b0e14;
+  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
+  background:#05070c;
   color:#fff;
   overflow-x:hidden;
 }
 
-/* ===== FONDO ===== */
+/* SYSTEM BACKGROUND */
 body::before{
   content:"";
   position:fixed;
   inset:0;
-  background:url('background.jpg') center/cover no-repeat;
+  background:
+    radial-gradient(circle at 15% 20%,rgba(0,200,255,.18),transparent 40%),
+    radial-gradient(circle at 80% 75%,rgba(140,90,255,.18),transparent 40%),
+    #05070c;
   z-index:-2;
 }
 body::after{
   content:"";
   position:fixed;
   inset:0;
-  background:linear-gradient(180deg,rgba(0,0,0,.6),rgba(0,0,0,.9));
+  backdrop-filter:blur(90px);
   z-index:-1;
 }
 
-/* ===== HEADER ===== */
+/* HEADER */
 header{
-  position:sticky;
+  position:fixed;
   top:0;
+  width:100%;
   z-index:1000;
   display:flex;
   justify-content:space-between;
   align-items:center;
-  padding:16px 30px;
-  background:rgba(0,0,0,.55);
-  backdrop-filter:blur(10px);
+  padding:16px 28px;
+  background:rgba(255,255,255,.04);
+  backdrop-filter:blur(16px);
+  border-bottom:1px solid rgba(255,255,255,.08);
 }
 nav{
   display:flex;
@@ -61,59 +66,79 @@ nav a:hover{opacity:1}
   gap:8px;
 }
 .lang-switch button{
-  background:transparent;
-  border:1px solid rgba(255,255,255,.3);
+  background:rgba(255,255,255,.08);
+  border:1px solid rgba(255,255,255,.18);
   color:#fff;
-  padding:4px 10px;
-  border-radius:8px;
+  padding:6px 12px;
+  border-radius:10px;
   cursor:pointer;
-  font-size:13px;
-}
-.lang-switch button:hover{
-  background:#00cfff;
-  color:#000;
 }
 
-/* ===== TITLE ===== */
+/* MAIN */
 main{
-  max-width:1200px;
-  margin:auto;
-  padding:100px 20px;
-  text-align:center;
-}
-h1{
-  font-size:clamp(36px,6vw,64px);
-  margin-bottom:14px;
-}
-p{
-  opacity:.9;
-  margin-bottom:60px;
-  font-size:18px;
+  max-width:1300px;
+  margin:140px auto 120px;
+  padding:0 20px;
 }
 
-/* ===== SLIDER ===== */
-.slider-wrapper{
-  position:relative;
+/* TITLE PANEL */
+.title-panel{
+  background:linear-gradient(
+    180deg,
+    rgba(255,255,255,.14),
+    rgba(255,255,255,.04)
+  );
+  border:1px solid rgba(255,255,255,.18);
+  border-radius:32px;
+  padding:60px;
+  backdrop-filter:blur(26px);
+  box-shadow:0 40px 120px rgba(0,0,0,.85);
+  margin-bottom:90px;
 }
-.slider{
+.title-panel h1{
+  font-size:clamp(42px,6vw,76px);
+  margin-bottom:18px;
+}
+.title-panel p{
+  font-size:20px;
+  max-width:760px;
+  opacity:.95;
+}
+
+/* DEMO SLIDER */
+.demo-system{
+  position:relative;
+  margin-bottom:120px;
+}
+.demo-track{
   display:flex;
-  gap:30px;
+  gap:34px;
   overflow-x:auto;
   scroll-snap-type:x mandatory;
   scroll-behavior:smooth;
   padding-bottom:20px;
 }
-.slide{
-  min-width:280px;
-  max-width:280px;
-  background:rgba(255,255,255,.06);
-  border-radius:22px;
-  padding:16px;
+.demo-card{
+  min-width:300px;
   scroll-snap-align:center;
+  background:linear-gradient(
+    180deg,
+    rgba(255,255,255,.18),
+    rgba(255,255,255,.05)
+  );
+  border:1px solid rgba(255,255,255,.2);
+  border-radius:30px;
+  padding:18px;
+  backdrop-filter:blur(22px);
+  box-shadow:0 30px 80px rgba(0,0,0,.7);
+  transition:.6s cubic-bezier(.16,1,.3,1);
 }
-.slide img{
+.demo-card:hover{
+  transform:translateY(-16px) scale(1.03);
+}
+.demo-card img{
   width:100%;
-  border-radius:14px;
+  border-radius:20px;
 }
 
 /* ARROWS */
@@ -121,44 +146,63 @@ p{
   position:absolute;
   top:50%;
   transform:translateY(-50%);
-  background:rgba(0,200,255,.2);
-  border:none;
+  width:52px;
+  height:52px;
+  border-radius:50%;
+  background:rgba(255,255,255,.14);
+  border:1px solid rgba(255,255,255,.25);
   color:#fff;
   font-size:26px;
-  width:44px;
-  height:44px;
-  border-radius:50%;
   cursor:pointer;
 }
 .arrow.left{left:-10px}
 .arrow.right{right:-10px}
 
-/* ===== REVIEWS ===== */
-.reviews{
-  margin-top:100px;
+/* REVIEWS SYSTEM */
+.reviews-system{
+  background:linear-gradient(
+    180deg,
+    rgba(255,255,255,.12),
+    rgba(255,255,255,.03)
+  );
+  border:1px solid rgba(255,255,255,.18);
+  border-radius:36px;
+  padding:60px;
+  backdrop-filter:blur(26px);
+  box-shadow:0 40px 120px rgba(0,0,0,.8);
 }
-.review-slider{
+.reviews-system h2{
+  font-size:34px;
+  margin-bottom:36px;
+}
+
+.review-track{
   display:flex;
-  gap:20px;
+  gap:26px;
   overflow-x:auto;
   scroll-snap-type:x mandatory;
 }
 .review{
-  min-width:300px;
-  background:rgba(255,255,255,.06);
-  padding:26px;
-  border-radius:20px;
+  min-width:320px;
   scroll-snap-align:center;
-  text-align:left;
+  background:rgba(255,255,255,.08);
+  border:1px solid rgba(255,255,255,.18);
+  border-radius:26px;
+  padding:30px;
+}
+.review strong{
+  display:block;
+  margin-top:14px;
+  color:#00cfff;
 }
 
-/* ===== WHATSAPP ===== */
+/* WHATSAPP */
 .whatsapp{
   position:fixed;
   bottom:22px;
   right:22px;
-  width:60px;
-  height:60px;
+  width:62px;
+  height:62px;
   background:#25D366;
   border-radius:50%;
   display:flex;
@@ -167,7 +211,7 @@ p{
   font-size:30px;
   color:#fff;
   text-decoration:none;
-  z-index:3000;
+  z-index:2000;
 }
 </style>
 </head>
@@ -177,10 +221,10 @@ p{
 <header>
   <strong>ZenSite</strong>
   <nav>
-    <a href="index.html" data-es="Inicio" data-en="Home">Inicio</a>
-    <a href="demo.html" data-es="Demos" data-en="Demos">Demos</a>
-    <a href="planes.html" data-es="Planes" data-en="Plans">Planes</a>
-    <a href="nosotros.html" data-es="Nosotros" data-en="About">Nosotros</a>
+    <a href="index.html">Inicio</a>
+    <a href="demo.html">Demos</a>
+    <a href="planes.html">Planes</a>
+    <a href="nosotros.html">Sistema</a>
 
     <div class="lang-switch">
       <button onclick="setLang('es')">ES</button>
@@ -190,50 +234,56 @@ p{
 </header>
 
 <main>
-  <h1 data-es="Trabajos y demostraciones" data-en="Work & Demos">
-    Trabajos y demostraciones
-  </h1>
 
-  <p data-es="Desliza o usa las flechas para ver ejemplos reales."
-     data-en="Swipe or use arrows to view real examples.">
+<section class="title-panel">
+  <h1 data-es="Demo System" data-en="Demo System">Demo System</h1>
+  <p data-es="Explora ejemplos reales como si navegaras un sistema digital premium."
+     data-en="Explore real examples as if you were navigating a premium digital system.">
   </p>
+</section>
 
-  <!-- SLIDER -->
-  <div class="slider-wrapper">
-    <button class="arrow left" onclick="slide(-1)">‹</button>
+<section class="demo-system">
+  <button class="arrow left" onclick="moveDemo(-1)">‹</button>
 
-    <div class="slider" id="slider">
-      <div class="slide"><img src="demo1.jpg" alt="Demo 1"></div>
-      <div class="slide"><img src="demo2.jpg" alt="Demo 2"></div>
-      <div class="slide"><img src="demo3.jpg" alt="Demo 3"></div>
-      <div class="slide"><img src="demo4.jpg" alt="Demo 4"></div>
-      <div class="slide"><img src="demo5.jpg" alt="Demo 5"></div>
-    </div>
-
-    <button class="arrow right" onclick="slide(1)">›</button>
+  <div class="demo-track" id="demoTrack">
+    <div class="demo-card"><img src="demo1.jpg"></div>
+    <div class="demo-card"><img src="demo2.jpg"></div>
+    <div class="demo-card"><img src="demo3.jpg"></div>
+    <div class="demo-card"><img src="demo4.jpg"></div>
+    <div class="demo-card"><img src="demo5.jpg"></div>
   </div>
 
-  <!-- REVIEWS -->
-  <section class="reviews">
-    <h2 data-es="Opiniones reales" data-en="Real reviews">Opiniones reales</h2>
+  <button class="arrow right" onclick="moveDemo(1)">›</button>
+</section>
 
-    <div class="review-slider">
-      <div class="review">⭐⭐⭐⭐⭐<br>“La web se ve limpia y profesional.”<br><strong>— Carlos M.</strong></div>
-      <div class="review">⭐⭐⭐⭐⭐<br>“Ahora mi negocio sí da confianza.”<br><strong>— Andrea R.</strong></div>
-      <div class="review">⭐⭐⭐⭐⭐<br>“Funciona perfecto en el celular.”<br><strong>— Luis G.</strong></div>
-      <div class="review">⭐⭐⭐⭐⭐<br>“Diseño claro y sin complicaciones.”<br><strong>— Miguel T.</strong></div>
-    </div>
-  </section>
+<section class="reviews-system">
+  <h2 data-es="Feedback del sistema" data-en="System feedback">Feedback del sistema</h2>
+
+  <div class="review-track" id="reviewTrack">
+    <div class="review">⭐⭐⭐⭐⭐<br>“Esto se siente como una app.”<strong>— Carlos M.</strong></div>
+    <div class="review">⭐⭐⭐⭐⭐<br>“No parece una web común.”<strong>— Andrea R.</strong></div>
+    <div class="review">⭐⭐⭐⭐⭐<br>“Se ve caro y serio.”<strong>— Luis G.</strong></div>
+    <div class="review">⭐⭐⭐⭐⭐<br>“Carga rápido y fluido.”<strong>— Miguel T.</strong></div>
+  </div>
+</section>
+
 </main>
 
 <a class="whatsapp" href="https://wa.me/15027942412" target="_blank">💬</a>
 
 <script>
-const slider=document.getElementById("slider");
-function slide(dir){
-  slider.scrollBy({left:dir*320,behavior:"smooth"});
+const demo=document.getElementById("demoTrack");
+function moveDemo(dir){
+  demo.scrollBy({left:dir*340,behavior:"smooth"});
 }
 
+// AUTO SLIDE REVIEWS
+setInterval(()=>{
+  document.getElementById("reviewTrack")
+    .scrollBy({left:340,behavior:"smooth"});
+},3500);
+
+// LANG
 function setLang(lang){
   document.querySelectorAll("[data-es]").forEach(el=>{
     el.innerText = el.getAttribute("data-" + lang);
