--- a/demo.html
+++ b/demo.html
@@ -7,23 +7,30 @@
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
+
 body{
   font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
   background:#05070c;
   color:#fff;
   overflow:hidden;
+  transition:opacity .3s ease;
 }
 
-/* BACKGROUND */
+/* ===== DYNAMIC BACKGROUND ===== */
 body::before{
   content:"";
   position:fixed;
   inset:0;
   background:
-    radial-gradient(circle at 20% 25%,rgba(0,200,255,.2),transparent 40%),
-    radial-gradient(circle at 80% 70%,rgba(140,90,255,.2),transparent 40%),
+    radial-gradient(circle at 20% 25%,rgba(0,200,255,.22),transparent 40%),
+    radial-gradient(circle at 80% 70%,rgba(140,90,255,.22),transparent 40%),
     #05070c;
   z-index:-2;
+  animation:bgMove 18s ease-in-out infinite alternate;
+}
+@keyframes bgMove{
+  0%{filter:hue-rotate(0deg)}
+  100%{filter:hue-rotate(18deg)}
 }
 body::after{
   content:"";
@@ -33,7 +40,7 @@ body::after{
   z-index:-1;
 }
 
-/* HEADER */
+/* ===== HEADER ===== */
 header{
   position:fixed;
   top:0;
@@ -49,7 +56,6 @@ header{
 }
 nav{
   display:flex;
-  align-items:center;
   gap:22px;
 }
 nav a{
@@ -58,8 +64,9 @@ nav a{
   font-weight:600;
   opacity:.85;
 }
+nav a:hover{opacity:1}
 
-/* MAIN */
+/* ===== MAIN ===== */
 main{
   margin-top:100px;
   height:calc(100vh - 100px);
@@ -69,11 +76,11 @@ main{
   justify-content:center;
 }
 
-/* SLIDER SYSTEM */
+/* ===== SLIDER SYSTEM ===== */
 .slider-system{
   position:relative;
   width:90%;
-  max-width:900px;
+  max-width:920px;
   height:520px;
   overflow:hidden;
   border-radius:32px;
@@ -86,7 +93,7 @@ main{
   display:flex;
   width:500%;
   height:100%;
-  transition:transform .7s cubic-bezier(.16,1,.3,1);
+  transition:transform .85s cubic-bezier(.22,1,.36,1);
 }
 
 .slide{
@@ -95,7 +102,10 @@ main{
   display:flex;
   align-items:center;
   justify-content:center;
+  opacity:.45;
+  transition:opacity .6s ease;
 }
+.slide.active{opacity:1}
 
 .slide img{
   width:92%;
@@ -103,7 +113,7 @@ main{
   box-shadow:0 30px 80px rgba(0,0,0,.8);
 }
 
-/* ARROWS */
+/* ===== ARROWS ===== */
 .arrow{
   position:absolute;
   top:50%;
@@ -116,38 +126,57 @@ main{
   color:#fff;
   font-size:28px;
   cursor:pointer;
-  display:flex;
-  align-items:center;
-  justify-content:center;
 }
+.arrow:hover{background:rgba(255,255,255,.22)}
 .arrow.left{left:18px}
 .arrow.right{right:18px}
 
-/* REVIEWS */
+/* ===== PROGRESS DOTS ===== */
+.dots{
+  display:flex;
+  gap:10px;
+  margin-top:18px;
+}
+.dot{
+  width:10px;
+  height:10px;
+  border-radius:50%;
+  background:rgba(255,255,255,.3);
+  transition:.3s;
+}
+.dot.active{
+  background:#00cfff;
+  box-shadow:0 0 10px rgba(0,200,255,.9);
+}
+
+/* ===== REVIEWS ===== */
 .reviews{
-  margin-top:40px;
+  margin-top:42px;
   width:90%;
-  max-width:700px;
+  max-width:720px;
   overflow:hidden;
 }
 .review-track{
   display:flex;
-  width:400%;
-  transition:transform .6s ease;
+  width:500%;
+  transition:transform .6s cubic-bezier(.22,1,.36,1);
 }
 .review{
   width:100%;
   flex-shrink:0;
   text-align:center;
+  font-size:17px;
+  line-height:1.55;
   opacity:.95;
+  letter-spacing:.2px;
 }
 .review strong{
   display:block;
-  margin-top:10px;
+  margin-top:12px;
   color:#00cfff;
 }
 
-/* WHATSAPP */
+/* ===== WHATSAPP ===== */
 .whatsapp{
   position:fixed;
   bottom:22px;
@@ -180,6 +209,7 @@ main{
 
 <main>
 
+<!-- SLIDER -->
 <div class="slider-system">
   <button class="arrow left" onclick="prev()">‹</button>
 
@@ -194,40 +224,63 @@ main{
   <button class="arrow right" onclick="next()">›</button>
 </div>
 
+<!-- DOTS -->
+<div class="dots" id="dots">
+  <div class="dot"></div>
+  <div class="dot"></div>
+  <div class="dot"></div>
+  <div class="dot"></div>
+  <div class="dot"></div>
+</div>
+
+<!-- REVIEWS -->
 <div class="reviews">
   <div class="review-track" id="reviews">
-    <div class="review">⭐⭐⭐⭐⭐<br>“Esto parece una app.”<strong>— Carlos M.</strong></div>
-    <div class="review">⭐⭐⭐⭐⭐<br>“Se siente caro.”<strong>— Andrea R.</strong></div>
-    <div class="review">⭐⭐⭐⭐⭐<br>“Nada genérico.”<strong>— Luis G.</strong></div>
-    <div class="review">⭐⭐⭐⭐⭐<br>“Muy fluido.”<strong>— Miguel T.</strong></div>
+    <div class="review">⭐⭐⭐⭐⭐<br>“Ahora sí se ve serio.”<strong>— María Pérez</strong></div>
+    <div class="review">⭐⭐⭐⭐⭐<br>“Parece una app.”<strong>— Williams Brandom</strong></div>
+    <div class="review">⭐⭐⭐⭐⭐<br>“Muy limpio y profesional.”<strong>— Carmen García</strong></div>
+    <div class="review">⭐⭐⭐⭐⭐<br>“No es genérico.”<strong>— Diane Olazabal</strong></div>
+    <div class="review">⭐⭐⭐⭐⭐<br>“Súper fluido.”<strong>— Roberto M.</strong></div>
   </div>
 </div>
 
 </main>
 
+<audio id="clickSound" preload="auto">
+  <source src="https://assets.mixkit.co/sfx/preview/mixkit-soft-click-1125.mp3" type="audio/mpeg">
+</audio>
+
 <a class="whatsapp" href="https://wa.me/15027942412">💬</a>
 
 <script>
 let index=0;
+const total=5;
 const slides=document.getElementById("slides");
 const reviews=document.getElementById("reviews");
+const dots=document.querySelectorAll(".dot");
+const sound=document.getElementById("clickSound");
 
 function update(){
   slides.style.transform=`translateX(-${index*100}%)`;
   reviews.style.transform=`translateX(-${index*100}%)`;
+
+  document.querySelectorAll(".slide").forEach((s,i)=>{
+    s.classList.toggle("active",i===index);
+  });
+  dots.forEach((d,i)=>{
+    d.classList.toggle("active",i===index);
+  });
+
+  sound.currentTime=0;
+  sound.volume=0.15;
+  sound.play();
 }
 
-function next(){
-  index=(index+1)%5;
-  update();
-}
-function prev(){
-  index=(index-1+5)%5;
-  update();
-}
+function next(){index=(index+1)%total;update();}
+function prev(){index=(index-1+total)%total;update();}
 
-// AUTO SLIDE
-setInterval(next,4500);
+update();
+setInterval(next,4800);
 </script>
 
 </body>
