--- a/demo.html
+++ b/demo.html
@@ -3,60 +3,32 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ZenSite | Demo System</title>
+<title>ZenSite | Demos</title>
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 
 body{
   font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
-  background:#05070c;
+  background:#0a0d14;
   color:#fff;
-  overflow:hidden;
-  transition:opacity .3s ease;
 }
 
-/* ===== DYNAMIC BACKGROUND ===== */
-body::before{
-  content:"";
-  position:fixed;
-  inset:0;
-  background:
-    radial-gradient(circle at 20% 25%,rgba(0,200,255,.22),transparent 40%),
-    radial-gradient(circle at 80% 70%,rgba(140,90,255,.22),transparent 40%),
-    #05070c;
-  z-index:-2;
-  animation:bgMove 18s ease-in-out infinite alternate;
-}
-@keyframes bgMove{
-  0%{filter:hue-rotate(0deg)}
-  100%{filter:hue-rotate(18deg)}
-}
-body::after{
-  content:"";
-  position:fixed;
-  inset:0;
-  backdrop-filter:blur(90px);
-  z-index:-1;
-}
-
-/* ===== HEADER ===== */
+/* HEADER */
 header{
-  position:fixed;
+  position:sticky;
   top:0;
-  width:100%;
-  z-index:1000;
+  z-index:100;
   display:flex;
   justify-content:space-between;
   align-items:center;
-  padding:16px 28px;
-  background:rgba(255,255,255,.04);
-  backdrop-filter:blur(16px);
+  padding:16px 24px;
+  background:#0a0d14;
   border-bottom:1px solid rgba(255,255,255,.08);
 }
 nav{
   display:flex;
-  gap:22px;
+  gap:20px;
 }
 nav a{
   color:#fff;
@@ -66,129 +38,103 @@ nav a{
 }
 nav a:hover{opacity:1}
 
-/* ===== MAIN ===== */
+/* MAIN */
 main{
-  margin-top:100px;
-  height:calc(100vh - 100px);
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:center;
+  max-width:1100px;
+  margin:60px auto 100px;
+  padding:0 20px;
+  text-align:center;
 }
 
-/* ===== SLIDER SYSTEM ===== */
-.slider-system{
+h1{
+  font-size:clamp(32px,6vw,56px);
+  margin-bottom:16px;
+}
+p{
+  max-width:720px;
+  margin:0 auto 50px;
+  opacity:.9;
+  line-height:1.6;
+}
+
+/* SLIDER */
+.slider{
   position:relative;
-  width:90%;
-  max-width:920px;
-  height:520px;
   overflow:hidden;
-  border-radius:32px;
-  background:rgba(255,255,255,.06);
-  backdrop-filter:blur(20px);
-  box-shadow:0 40px 120px rgba(0,0,0,.9);
+  border-radius:22px;
+  background:#111622;
 }
 
 .slides{
   display:flex;
-  width:500%;
-  height:100%;
-  transition:transform .85s cubic-bezier(.22,1,.36,1);
+  transition:transform .5s ease;
 }
 
 .slide{
-  width:100%;
-  flex-shrink:0;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  opacity:.45;
-  transition:opacity .6s ease;
+  min-width:100%;
+  padding:20px;
 }
-.slide.active{opacity:1}
 
 .slide img{
-  width:92%;
-  border-radius:24px;
-  box-shadow:0 30px 80px rgba(0,0,0,.8);
+  width:100%;
+  max-width:900px;
+  margin:auto;
+  display:block;
+  border-radius:18px;
 }
 
-/* ===== ARROWS ===== */
+/* ARROWS */
 .arrow{
   position:absolute;
   top:50%;
   transform:translateY(-50%);
-  width:56px;
-  height:56px;
+  width:44px;
+  height:44px;
   border-radius:50%;
-  background:rgba(255,255,255,.12);
-  border:1px solid rgba(255,255,255,.25);
+  background:rgba(255,255,255,.15);
+  border:none;
   color:#fff;
-  font-size:28px;
+  font-size:24px;
   cursor:pointer;
 }
-.arrow:hover{background:rgba(255,255,255,.22)}
-.arrow.left{left:18px}
-.arrow.right{right:18px}
+.arrow.left{left:10px}
+.arrow.right{right:10px}
 
-/* ===== PROGRESS DOTS ===== */
-.dots{
-  display:flex;
-  gap:10px;
-  margin-top:18px;
-}
-.dot{
-  width:10px;
-  height:10px;
-  border-radius:50%;
-  background:rgba(255,255,255,.3);
-  transition:.3s;
-}
-.dot.active{
-  background:#00cfff;
-  box-shadow:0 0 10px rgba(0,200,255,.9);
-}
-
-/* ===== REVIEWS ===== */
+/* REVIEWS */
 .reviews{
-  margin-top:42px;
-  width:90%;
-  max-width:720px;
+  margin-top:60px;
   overflow:hidden;
 }
 .review-track{
   display:flex;
-  width:500%;
-  transition:transform .6s cubic-bezier(.22,1,.36,1);
+  transition:transform .5s ease;
 }
 .review{
-  width:100%;
-  flex-shrink:0;
-  text-align:center;
-  font-size:17px;
-  line-height:1.55;
+  min-width:100%;
+  padding:20px;
+  font-size:16px;
+  line-height:1.6;
   opacity:.95;
-  letter-spacing:.2px;
 }
 .review strong{
   display:block;
-  margin-top:12px;
+  margin-top:10px;
   color:#00cfff;
 }
 
-/* ===== WHATSAPP ===== */
+/* WHATSAPP */
 .whatsapp{
   position:fixed;
-  bottom:22px;
-  right:22px;
-  width:62px;
-  height:62px;
+  bottom:20px;
+  right:20px;
+  width:58px;
+  height:58px;
   background:#25D366;
   border-radius:50%;
   display:flex;
   align-items:center;
   justify-content:center;
-  font-size:30px;
+  font-size:28px;
   color:#fff;
   text-decoration:none;
 }
@@ -203,14 +149,19 @@ main{
     <a href="index.html">Inicio</a>
     <a href="demo.html">Demos</a>
     <a href="planes.html">Planes</a>
-    <a href="nosotros.html">Sistema</a>
+    <a href="nosotros.html">Nosotros</a>
   </nav>
 </header>
 
 <main>
 
-<!-- SLIDER -->
-<div class="slider-system">
+<h1>Demos reales</h1>
+<p>
+Ejemplos del tipo de webs que diseñamos.
+Claridad, profesionalismo y enfoque en ventas.
+</p>
+
+<div class="slider">
   <button class="arrow left" onclick="prev()">‹</button>
 
   <div class="slides" id="slides">
@@ -224,31 +175,17 @@ main{
   <button class="arrow right" onclick="next()">›</button>
 </div>
 
-<!-- DOTS -->
-<div class="dots" id="dots">
-  <div class="dot"></div>
-  <div class="dot"></div>
-  <div class="dot"></div>
-  <div class="dot"></div>
-  <div class="dot"></div>
-</div>
-
-<!-- REVIEWS -->
 <div class="reviews">
   <div class="review-track" id="reviews">
-    <div class="review">⭐⭐⭐⭐⭐<br>“Ahora sí se ve serio.”<strong>— María Pérez</strong></div>
-    <div class="review">⭐⭐⭐⭐⭐<br>“Parece una app.”<strong>— Williams Brandom</strong></div>
-    <div class="review">⭐⭐⭐⭐⭐<br>“Muy limpio y profesional.”<strong>— Carmen García</strong></div>
-    <div class="review">⭐⭐⭐⭐⭐<br>“No es genérico.”<strong>— Diane Olazabal</strong></div>
-    <div class="review">⭐⭐⭐⭐⭐<br>“Súper fluido.”<strong>— Roberto M.</strong></div>
+    <div class="review">⭐⭐⭐⭐⭐ “Ahora sí se ve profesional.”<strong>— María Pérez</strong></div>
+    <div class="review">⭐⭐⭐⭐⭐ “Nada se ve exagerado.”<strong>— Williams Brandom</strong></div>
+    <div class="review">⭐⭐⭐⭐⭐ “Perfecta en el teléfono.”<strong>— Carmen García</strong></div>
+    <div class="review">⭐⭐⭐⭐⭐ “Se entiende todo.”<strong>— Diane Olazabal</strong></div>
+    <div class="review">⭐⭐⭐⭐⭐ “Muy limpia.”<strong>— Roberto M.</strong></div>
   </div>
 </div>
 
 </main>
-
-<audio id="clickSound" preload="auto">
-  <source src="https://assets.mixkit.co/sfx/preview/mixkit-soft-click-1125.mp3" type="audio/mpeg">
-</audio>
 
 <a class="whatsapp" href="https://wa.me/15027942412">💬</a>
 
@@ -257,30 +194,13 @@ let index=0;
 const total=5;
 const slides=document.getElementById("slides");
 const reviews=document.getElementById("reviews");
-const dots=document.querySelectorAll(".dot");
-const sound=document.getElementById("clickSound");
 
 function update(){
   slides.style.transform=`translateX(-${index*100}%)`;
   reviews.style.transform=`translateX(-${index*100}%)`;
-
-  document.querySelectorAll(".slide").forEach((s,i)=>{
-    s.classList.toggle("active",i===index);
-  });
-  dots.forEach((d,i)=>{
-    d.classList.toggle("active",i===index);
-  });
-
-  sound.currentTime=0;
-  sound.volume=0.15;
-  sound.play();
 }
-
 function next(){index=(index+1)%total;update();}
 function prev(){index=(index-1+total)%total;update();}
-
-update();
-setInterval(next,4800);
 </script>
 
 </body>
