--- a/demo.html
+++ b/demo.html
@@ -9,8 +9,8 @@
 *{margin:0;padding:0;box-sizing:border-box}
 
 body{
-  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
-  background:#0a0d14;
+  font-family:system-ui,-apple-system,Segoe UI,Arial,sans-serif;
+  background:#0b0f17;
   color:#fff;
 }
 
@@ -18,21 +18,18 @@ body{
 header{
   position:sticky;
   top:0;
-  z-index:100;
+  z-index:10;
+  background:#0b0f17;
+  border-bottom:1px solid rgba(255,255,255,.08);
+  padding:14px 20px;
   display:flex;
   justify-content:space-between;
   align-items:center;
-  padding:16px 24px;
-  background:#0a0d14;
-  border-bottom:1px solid rgba(255,255,255,.08);
-}
-nav{
-  display:flex;
-  gap:20px;
 }
 nav a{
   color:#fff;
   text-decoration:none;
+  margin-left:16px;
   font-weight:600;
   opacity:.85;
 }
@@ -41,18 +38,18 @@ nav a:hover{opacity:1}
 /* MAIN */
 main{
   max-width:1100px;
-  margin:60px auto 100px;
-  padding:0 20px;
+  margin:40px auto 100px;
+  padding:0 16px;
   text-align:center;
 }
 
 h1{
-  font-size:clamp(32px,6vw,56px);
-  margin-bottom:16px;
+  font-size:clamp(28px,6vw,52px);
+  margin-bottom:12px;
 }
 p{
   max-width:720px;
-  margin:0 auto 50px;
+  margin:0 auto 40px;
   opacity:.9;
   line-height:1.6;
 }
@@ -60,27 +57,29 @@ p{
 /* SLIDER */
 .slider{
   position:relative;
-  overflow:hidden;
-  border-radius:22px;
-  background:#111622;
+  background:#111827;
+  border-radius:20px;
+  padding:16px;
 }
 
-.slides{
-  display:flex;
-  transition:transform .5s ease;
-}
-
+/* CONTENEDOR DE IMAGEN */
 .slide{
-  min-width:100%;
-  padding:20px;
+  display:none;
+}
+.slide.active{
+  display:block;
 }
 
+/* IMAGEN – ESTA ES LA CLAVE */
 .slide img{
+  display:block;
+  margin:auto;
   width:100%;
   max-width:900px;
-  margin:auto;
-  display:block;
-  border-radius:18px;
+  max-height:70vh;        /* ← CLAVE */
+  object-fit:contain;     /* ← CLAVE */
+  border-radius:14px;
+  background:#000;
 }
 
 /* ARROWS */
@@ -88,13 +87,13 @@ p{
   position:absolute;
   top:50%;
   transform:translateY(-50%);
-  width:44px;
-  height:44px;
+  width:40px;
+  height:40px;
   border-radius:50%;
-  background:rgba(255,255,255,.15);
   border:none;
+  background:rgba(255,255,255,.15);
   color:#fff;
-  font-size:24px;
+  font-size:22px;
   cursor:pointer;
 }
 .arrow.left{left:10px}
@@ -102,23 +101,19 @@ p{
 
 /* REVIEWS */
 .reviews{
-  margin-top:60px;
-  overflow:hidden;
-}
-.review-track{
-  display:flex;
-  transition:transform .5s ease;
+  margin-top:50px;
 }
 .review{
-  min-width:100%;
-  padding:20px;
+  display:none;
   font-size:16px;
   line-height:1.6;
-  opacity:.95;
+}
+.review.active{
+  display:block;
 }
 .review strong{
   display:block;
-  margin-top:10px;
+  margin-top:8px;
   color:#00cfff;
 }
 
@@ -127,8 +122,8 @@ p{
   position:fixed;
   bottom:20px;
   right:20px;
-  width:58px;
-  height:58px;
+  width:56px;
+  height:56px;
   background:#25D366;
   border-radius:50%;
   display:flex;
@@ -157,32 +152,28 @@ p{
 
 <h1>Demos reales</h1>
 <p>
-Ejemplos del tipo de webs que diseñamos.
-Claridad, profesionalismo y enfoque en ventas.
+Ejemplos claros del tipo de webs que diseñamos.
+Sin exageraciones, sin efectos raros.
 </p>
 
 <div class="slider">
   <button class="arrow left" onclick="prev()">‹</button>
 
-  <div class="slides" id="slides">
-    <div class="slide"><img src="demo1.jpg"></div>
-    <div class="slide"><img src="demo2.jpg"></div>
-    <div class="slide"><img src="demo3.jpg"></div>
-    <div class="slide"><img src="demo4.jpg"></div>
-    <div class="slide"><img src="demo5.jpg"></div>
-  </div>
+  <div class="slide active"><img src="demo1.jpg"></div>
+  <div class="slide"><img src="demo2.jpg"></div>
+  <div class="slide"><img src="demo3.jpg"></div>
+  <div class="slide"><img src="demo4.jpg"></div>
+  <div class="slide"><img src="demo5.jpg"></div>
 
   <button class="arrow right" onclick="next()">›</button>
 </div>
 
 <div class="reviews">
-  <div class="review-track" id="reviews">
-    <div class="review">⭐⭐⭐⭐⭐ “Ahora sí se ve profesional.”<strong>— María Pérez</strong></div>
-    <div class="review">⭐⭐⭐⭐⭐ “Nada se ve exagerado.”<strong>— Williams Brandom</strong></div>
-    <div class="review">⭐⭐⭐⭐⭐ “Perfecta en el teléfono.”<strong>— Carmen García</strong></div>
-    <div class="review">⭐⭐⭐⭐⭐ “Se entiende todo.”<strong>— Diane Olazabal</strong></div>
-    <div class="review">⭐⭐⭐⭐⭐ “Muy limpia.”<strong>— Roberto M.</strong></div>
-  </div>
+  <div class="review active">⭐⭐⭐⭐⭐ “Ahora sí se ve claro.”<strong>— María Pérez</strong></div>
+  <div class="review">⭐⭐⭐⭐⭐ “Nada gigante ni raro.”<strong>— Williams Brandom</strong></div>
+  <div class="review">⭐⭐⭐⭐⭐ “Perfecta en el teléfono.”<strong>— Carmen García</strong></div>
+  <div class="review">⭐⭐⭐⭐⭐ “Todo se entiende.”<strong>— Diane Olazabal</strong></div>
+  <div class="review">⭐⭐⭐⭐⭐ “Así era como debía verse.”<strong>— Roberto M.</strong></div>
 </div>
 
 </main>
@@ -191,16 +182,15 @@ Claridad, profesionalismo y enfoque en ventas.
 
 <script>
 let index=0;
-const total=5;
-const slides=document.getElementById("slides");
-const reviews=document.getElementById("reviews");
+const slides=document.querySelectorAll(".slide");
+const reviews=document.querySelectorAll(".review");
 
-function update(){
-  slides.style.transform=`translateX(-${index*100}%)`;
-  reviews.style.transform=`translateX(-${index*100}%)`;
+function show(){
+  slides.forEach((s,i)=>s.classList.toggle("active",i===index));
+  reviews.forEach((r,i)=>r.classList.toggle("active",i===index));
 }
-function next(){index=(index+1)%total;update();}
-function prev(){index=(index-1+total)%total;update();}
+function next(){index=(index+1)%slides.length;show();}
+function prev(){index=(index-1+slides.length)%slides.length;show();}
 </script>
 
 </body>
